tests/files/flow_controller_tests/should_run/002.cmdr
//Test simple variable assignment with floats
x = 3.14;
y = x;
println x;
println y;