tests/files/flow_controller_tests/should_fail/019.cmdr
//Should fail due to modulo by 0 with a variable holding 0.0 with set
x = 3.5;
y = 0.0;
x %= y;